<resources>
    <string name="app_name">Week5AppEM197</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_records">There are no records yet. \nAdd new Records.</string>
    <string name="add_records">Add Student</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="class_id">Class ID</string>
    <string name="class_name">Class Name</string>
    <string name="save_record">Save</string>
    <string name="grade">Grade</string>
    <string name="score">Score</string>
    <string name="required">Field Required.</string>
</resources>
